# furiousapi-sqlmodel

./:  requirements.txt  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
example/: app.py
furiousapi/sqlmodel/: __init__.py  config.py  models.py  pagination.py  repository.py
tests/: conftest.py  test_repository.py
