[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.autopep8]
aggressive = 3
# ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
max_line_length = 120
recursive = true

[tool.bandit.assert_used]
skips = ['**/test_*.py', '**/test_*.py']

[tool.black]
exclude = """
(
  /(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
"""
include = '\.pyi?$'
line-length = 120
preview = true
target-version = ['py39']

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:"
]

[tool.coverage.run]
branch = true
include = [
  "*/furiousapi/*"
]

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disable_error_code = "no-redef"
exclude = [
  '.venv/**/*.py'
]
explicit_package_bases = true
ignore_missing_imports = true
# strict = true
plugins = "pydantic.mypy"

[tool.poetry]
authors = ["nadobando <7695172+nadobando@users.noreply.github.com>"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: AsyncIO",
  "Framework :: Pydantic",
  "Framework :: FastAPI",
  "Topic :: Database",
  "Topic :: Software Development",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Typing :: Typed"
]
description = "MongoDB Implementation for FastAPI & FuriousAPI"
documentation = "https://nadobando.github.io/furiousapi"
homepage = "https://github.com/nadobando/furiousapi-sqlmodel"
packages = [{include = "furiousapi"}]
readme = "README.md"
version = "0.0.1-dev.1"
repository = "https://github.com/nadobando/furiousapi-sqlmodel"

name = "furiousapi-sqlmodel"

[tool.poetry.dependencies]
furiousapi-core = {version = "^0", source = "test", allow-prereleases = true}
pydantic = "^1.10.13"
python = "^3.9.5"
sqlalchemy = {version = "^1.4.41", extras = ["asyncio"]}
sqlmodel = {version = "^0.0.8"}

[tool.poetry.group.dev.dependencies]
aiosqlite = {version = "^0.19.0"}
coverage = "^7.1.0"
greenlet = "^2.0.2"
httpx = "^0.23.3"
mypy = "^1.6"
pre-commit = "^3.0.1"
pytest = "^7.4.2"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-xdist = {version = "^3.2.1", extras = ["psutil"]}

[tool.poetry.plugins]

[[tool.poetry.source]]
name = "test"
secondary = true
url = "https://test.pypi.org/simple/"

# enable_recursive_aliases = true
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
  "tests"
]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
ignore = [
  "D",
  "ANN101",
  "A003",
  "B008",
  "B905",
  "COM",
  "PLR0913",
  "ANN003",
  "ANN002",
  "EM101",
  "TRY003",
  "ANN102",
  "UP035",
  "G004",
  "EM102",
  "I001",
  "ANN401",
  "TD",
  "FIX002"
]
line-length = 120
select = ["ALL"]

[tool.ruff.flake8-annotations]
mypy-init-return = true

[tool.ruff.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN201", "S101", "DTZ001", "PLR0913"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.semantic_release]
version_toml = [
  "pyproject.toml:tool.poetry.version"
]
version_variables = [
  "furiousapi/sqlmodel/__init__.py:__version__"
]

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "^ci:.*",
  "^(?!feat:|fix:|perf:|refactor:).*$"
]

[tool.semantic_release.publish]
upload_to_vcs_release = false
